--- a/package.json
+++ b/package.json
@@ -1,82 +1,132 @@
 {
-    "name": "grafana",
-    "displayName": "Grafana",
-    "description": "Grafana authoring tools for VS Code",
-    "version": "0.0.2",
-    "publisher": "yesoreyeram",
-    "author": {
-        "name": "Sriramajeyam Sugumaran",
-        "url": "https://github.com/yesoreyeram"
-    },
-    "repository": {
-        "url": "https://github.com/yesoreyeram/grafana-vscode"
-    },
-    "scripts": {
-        "build": "vsce package"
-    },
-    "engines": {
-        "vscode": "^1.51.0"
-    },
-    "keywords": [
-        "Grafana",
-        "Observability",
-        "Dashboards"
+  "name": "grafana",
+  "displayName": "Grafana",
+  "description": "Grafana authoring tools for VS Code",
+  "version": "0.0.2",
+  "publisher": "yesoreyeram",
+  "author": {
+    "name": "Sriramajeyam Sugumaran",
+    "url": "https://github.com/yesoreyeram"
+  },
+  "repository": {
+    "url": "https://github.com/yesoreyeram/grafana-vscode"
+  },
+  "scripts": {
+    "compile": "tsc -p ./",
+    "prebuild": "yarn compile",
+    "build": "vsce package"
+  },
+  "engines": {
+    "vscode": "^1.54.0"
+  },
+  "keywords": [
+    "Grafana",
+    "Observability",
+    "Dashboards"
+  ],
+  "categories": [
+    "Snippets",
+    "Data Science",
+    "Visualization"
+  ],
+  "icon": "grafana.png",
+  "main": "./dist/extension.js",
+  "activationEvents": [
+    "*"
+  ],
+  "contributes": {
+    "snippets": [
+      {
+        "language": "json",
+        "path": "./snippets/dashboards/grafana-dashboard.code-snippets"
+      },
+      {
+        "language": "json",
+        "path": "./snippets/dashboards/panels.code-snippets"
+      },
+      {
+        "language": "json",
+        "path": "./snippets/dashboards/grafana-queries.code-snippets"
+      },
+      {
+        "language": "json",
+        "path": "./snippets/plugins/plugin-json.code-snippets"
+      },
+      {
+        "language": "yaml",
+        "path": "./snippets/provisioning/datasources.code-snippets"
+      },
+      {
+        "language": "yaml",
+        "path": "./snippets/provisioning/notifiers.code-snippets"
+      },
+      {
+        "language": "ini",
+        "path": "./snippets/config/grafana-config.code-snippets"
+      },
+      {
+        "language": "ini",
+        "path": "./snippets/config/users-and-auth.code-snippets"
+      },
+      {
+        "language": "ini",
+        "path": "./snippets/config/log.code-snippets"
+      },
+      {
+        "language": "ini",
+        "path": "./snippets/config/external-image-store.code-snippets"
+      },
+      {
+        "language": "ini",
+        "path": "./snippets/config/plugins/grafana-image-renderer.code-snippets"
+      }
     ],
-    "categories": [
-        "Snippets",
-        "Data Science",
-        "Visualization"
+    "commands": [
+      {
+        "command": "grafana.initiateWorkspace",
+        "title": "Grafana : Set credentials"
+      },
+      {
+        "command": "grafana.downloadDashboardJSON",
+        "title": "Grafana : Download Dashboard JSON"
+      },
+      {
+        "command": "grafana.uploadDashboardJSON",
+        "title": "Grafana : Upload Dashboard JSON"
+      }
     ],
-    "icon": "grafana.png",
-    "contributes": {
-        "snippets": [
-            {
-                "language": "json",
-                "path": "./snippets/dashboards/grafana-dashboard.code-snippets"
-            },
-            {
-                "language": "json",
-                "path": "./snippets/dashboards/panels.code-snippets"
-            },
-            {
-                "language": "json",
-                "path": "./snippets/dashboards/grafana-queries.code-snippets"
-            },
-            {
-                "language": "json",
-                "path": "./snippets/plugins/plugin-json.code-snippets"
-            },
-            {
-                "language": "yaml",
-                "path": "./snippets/provisioning/datasources.code-snippets"
-            },
-            {
-                "language": "yaml",
-                "path": "./snippets/provisioning/notifiers.code-snippets"
-            },
-            {
-                "language": "ini",
-                "path": "./snippets/config/grafana-config.code-snippets"
-            },
-            {
-                "language": "ini",
-                "path": "./snippets/config/users-and-auth.code-snippets"
-            },
-            {
-                "language": "ini",
-                "path": "./snippets/config/log.code-snippets"
-            },
-            {
-                "language": "ini",
-                "path": "./snippets/config/external-image-store.code-snippets"
-            },
-            {
-                "language": "ini",
-                "path": "./snippets/config/plugins/grafana-image-renderer.code-snippets"
-            }
-        ]
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "grafana-explorer",
+          "title": "Grafana Explorer",
+          "icon": "grafana.png"
+        }
+      ]
     },
-    "devDependencies": {
-        "vsce": "^1.81.1"
-    }
+    "views": {
+      "grafana-explorer": [
+        {
+          "id": "grafana-dashboards",
+          "name": "Dashboards"
+        }
+      ]
+    },
+    "viewsWelcome": [
+      {
+        "view": "grafana-dashboards",
+        "contents": "List of Dashboards goes here. WIP"
+      }
+    ]
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.32",
+    "@types/node-fetch": "^2.5.8",
+    "@types/vscode": "^1.54.0",
+    "typescript": "^4.2.3",
+    "vsce": "^1.81.1"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
+  }
 }
